Column specific searching

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,3 +12,9 @@ textarea.code-area {
     max-width: max-content;
     overflow: auto;
 }
+
+.col-search {
+    display: block;
+    padding: 3px;
+    width: 100%;
+}
