Browser displays validation errors on empty required fields

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -26,3 +26,9 @@ textarea.code-area {
 table th {
     min-width: 100px;
 }
+
+.failed-input::after {
+    display: block;
+    content: attr(data-fail-reason);
+    color: red;
+}
